--- a/workspace/arquitetura-angular/src/app/data-binding/data-binding.component.html
+++ b/workspace/arquitetura-angular/src/app/data-binding/data-binding.component.html
@@ -1,1 +1,14 @@
-<p>data-binding works!</p>
+<div class="container justify-content-center">
+    <div class="row">
+        <div class="col-6 offset-3">
+            <article class="user">
+                <img class="user__avatar" [src]="avatar">
+                <h1 class="usar__name mt-3 mb-3">Oi, eu sou o {{name}}</h1>
+                <form class="form-inline">
+                    <input  class="user__input input-group" type="text" placeholder="Choose a name ..."[(ngModel)]="newName">
+                    <button class="user__button btn btn-primary" (click)="makeMeHero()">Make me badass!</button>
+                </form>
+            </article>
+        </div>
+    </div>
+</div>
